--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "loaderApp",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
-    "cordova-app-loader": "~0.14.0",
-    "cordova-promise-fs": "~0.10.0"
+    "ionic": "driftyco/ionic-bower#1.0.0-rc.2",
+    "cordova-app-loader": "~0.17.0",
+    "cordova-promise-fs": "~0.12.0"
   }
 }
