--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-filerev": "^2.1.2",
     "grunt-ng-annotate": "^0.10.0",
+    "grunt-processhtml": "^0.3.7",
     "grunt-usemin": "^3.0.0",
     "gulp-util": "^2.2.14",
     "http-server": "^0.7.4",
@@ -25,6 +26,12 @@
   },
   "cordovaPlugins": [
     "org.apache.cordova.file",
-    "org.apache.cordova.file-transfer"
+    "org.apache.cordova.file-transfer",
+    "com.ionic.keyboard",
+    "org.apache.cordova.console",
+    "org.apache.cordova.device"
+  ],
+  "cordovaPlatforms": [
+    "android"
   ]
 }
